--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+samba (2:3.2.0-2) experimental; urgency=low
+
+  * Fix up the copyright file to correctly document that we're now under
+    GPLv3, not GPLv2.
+
+ -- Steve Langasek <vorlon@debian.org>  Tue, 08 Jul 2008 12:21:47 -0700
+
 samba (2:3.2.0-1) experimental; urgency=low
 
   [ Christian Perrier ]
