I apparently forgot updating the trunk with 3.0.30-4
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2034 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-samba (2:3.0.30-4) UNRELEASED; urgency=low
+samba (2:3.0.30-4) unstable; urgency=low
 
   [ Christian Perrier ]
   * Rename libcupsys2-dev to libcups2-dev in build dependencies
@@ -15,7 +15,7 @@ samba (2:3.0.30-4) UNRELEASED; urgency=low
   [ Debconf translations ]
   * Romanian updated. Closes: #488709.
 
- -- Christian Perrier <bubulle@debian.org>  Fri, 13 Jun 2008 08:16:47 +0200
+ -- Christian Perrier <bubulle@debian.org>  Sun, 06 Jul 2008 11:43:53 +0200
 
 samba (2:3.0.30-3) unstable; urgency=low
 
