--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+samba (2:3.0.31-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Christian Perrier <bubulle@debian.org>  Sat, 12 Jul 2008 16:57:09 +0200
+
 samba (2:3.0.30-4) unstable; urgency=low
 
   [ Christian Perrier ]
