--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ samba (2:3.2.0-3) UNRELEASED; urgency=low
     and Makefile.in to properly avoid linking .a libraries into other .a
     libraries, since this bloats the libraries without providing any useful
     functionality.
+  * Version the build-dependency on libtalloc-dev, to ensure we're building
+    against a package with the right symbols.
 
  -- Steve Langasek <vorlon@debian.org>  Tue, 15 Jul 2008 12:33:54 +0100
 
