--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,8 @@ samba (2:3.2.0-3) UNRELEASED; urgency=low
     functionality.
   * Version the build-dependency on libtalloc-dev, to ensure we're building
     against a package with the right symbols.
-  * Add debian/libsmbclient.symbols, to get more fine-grained versioned
-    library dependencies
+  * Add debian/libsmbclient.symbols and debian/libwbclient0.symbols, to get
+    more fine-grained versioned library dependencies
 
  -- Steve Langasek <vorlon@debian.org>  Tue, 15 Jul 2008 12:33:54 +0100
 
