--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ samba (2:3.2.0-3) UNRELEASED; urgency=low
     against a package with the right symbols.
   * Add debian/libsmbclient.symbols and debian/libwbclient0.symbols, to get
     more fine-grained versioned library dependencies
+  * Bump the shlibs version for libsmbclient to 2:3.2.0, as new symbols
+    have been added.
 
  -- Steve Langasek <vorlon@debian.org>  Tue, 15 Jul 2008 12:33:54 +0100
 
