--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ samba (2:3.2.0-3) UNRELEASED; urgency=low
     more fine-grained versioned library dependencies
   * Bump the shlibs version for libsmbclient to 2:3.2.0, as new symbols
     have been added.
+  * Re-add docs/registry to samba-doc, restored upstream
 
  -- Steve Langasek <vorlon@debian.org>  Tue, 15 Jul 2008 12:33:54 +0100
 
