--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ samba (2:3.2.0-3) UNRELEASED; urgency=low
   * Bump the shlibs version for libsmbclient to 2:3.2.0, as new symbols
     have been added.
   * Re-add docs/registry to samba-doc, restored upstream
+  * Move schannel_store.tdb out of /etc/samba to /var/lib/samba, where it
+    belongs according to the FHS.  Closes: #454770.
 
  -- Steve Langasek <vorlon@debian.org>  Tue, 15 Jul 2008 12:33:54 +0100
 
