--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-samba (2:3.2.0-3) UNRELEASED; urgency=low
+samba (2:3.2.0-3) unstable; urgency=low
 
+  * Upload to unstable.
   * debian/patches/proper-static-lib-linking.patch: fix SMB_LIBRARY macro
     and Makefile.in to properly avoid linking .a libraries into other .a
     libraries, since this bloats the libraries without providing any useful
@@ -14,7 +15,7 @@ samba (2:3.2.0-3) UNRELEASED; urgency=low
   * Move schannel_store.tdb out of /etc/samba to /var/lib/samba, where it
     belongs according to the FHS.  Closes: #454770.
 
- -- Steve Langasek <vorlon@debian.org>  Tue, 15 Jul 2008 12:33:54 +0100
+ -- Steve Langasek <vorlon@debian.org>  Sun, 20 Jul 2008 15:38:10 -0700
 
 samba (2:3.2.0-2) experimental; urgency=low
 
