--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+samba (2:3.2.0-4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Steve Langasek <vorlon@debian.org>  Sun, 20 Jul 2008 16:10:31 -0700
+
 samba (2:3.2.0-3) unstable; urgency=low
 
   * Upload to unstable.
