--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 samba (2:3.2.0-4) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * Brown paper bag bug: add a change to debian/patches/fhs-filespaths.patch
+    that went missing somehow, causing samba to look for secrets.tdb in
+    /etc/samba instead of /var/lib/samba where it's been for years.  No
+    migration handling added, because this was only present in unstable for
+    about a day.  Thanks to Rick Nelson for pointing this out.
 
- -- Steve Langasek <vorlon@debian.org>  Sun, 20 Jul 2008 16:10:31 -0700
+ -- Steve Langasek <vorlon@debian.org>  Mon, 21 Jul 2008 15:12:03 -0700
 
 samba (2:3.2.0-3) unstable; urgency=low
 
