Build-depend on keyutils only on the linux archs.  Closes: #493401.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2101 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+samba (2:3.2.0-5) UNRELEASED; urgency=low
+
+  * Build-depend on keyutils only on the linux archs.  Closes: #493401.
+
+ -- Steve Langasek <vorlon@debian.org>  Sat, 02 Aug 2008 23:31:30 -0700
+
 samba (2:3.2.0-4) unstable; urgency=low
 
   * Brown paper bag bug: add a change to debian/patches/fhs-filespaths.patch
