use 'UNRELEASED' until we're ready to upload, for extra dch goodness.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2117 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-samba (2:3.2.1-1) unstable; urgency=low
+samba (2:3.2.1-1) UNRELEASED; urgency=low
 
   [ Steve Langasek ]
   * Build-depend on keyutils only on the linux archs.  Closes: #493401.
