--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-samba (2:3.2.1-1) UNRELEASED; urgency=low
+samba (2:3.2.1-1) unstable; urgency=low
 
   [ Steve Langasek ]
   * Build-depend on keyutils only on the linux archs.  Closes: #493401.
@@ -16,7 +16,7 @@ samba (2:3.2.1-1) UNRELEASED; urgency=low
     - Fix for print jobs that continued to show as active after printing
       had completed.  Closes: #494899.
 
- -- Christian Perrier <bubulle@debian.org>  Sat, 09 Aug 2008 17:27:45 -0300
+ -- Steve Langasek <vorlon@debian.org>  Thu, 14 Aug 2008 16:13:24 -0700
 
 samba (2:3.2.0-4) unstable; urgency=low
 
