--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+samba (2:3.2.2-1) UNRELEASED; urgency=low
+
+  * New upstream release
+    - Fix "/usr/lib/cups/backend/smb does not try port 139 anymore by default"
+      Closes: #491881
+
+  [ Steve Langasek ]
+  * 
+
+  [ Christian Perrier ]
+  * 
+
+  [ Noèl Köthe ]
+  * 
+
+ -- Noèl Köthe <noel@debian.org>  Sat, 16 Aug 2008 17:29:09 +0200
+
 samba (2:3.2.1-1) unstable; urgency=low
 
   [ Steve Langasek ]
