fixing lintian warning build-depends-on-1-revision
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2126 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ samba (2:3.2.2-1) UNRELEASED; urgency=low
   * 
 
   [ Noèl Köthe ]
-  * 
+  * fixing lintian warning "build-depends-on-1-revision"
 
  -- Noèl Köthe <noel@debian.org>  Sat, 16 Aug 2008 17:29:09 +0200
 
