--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ samba (2:3.2.2-1) UNRELEASED; urgency=low
   * New upstream release
     - Fix "/usr/lib/cups/backend/smb does not try port 139 anymore by default"
       Closes: #491881
+    - debian/rules, debian/smbfs.files: build with cifs.upcall,
+      newly introduced to replace cifs.spnego
 
   [ Noèl Köthe ]
   * fixing lintian warning "build-depends-on-1-revision"
