--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+samba (2:3.2.3-2) UNRELEASED; urgency=low
+
+  * Fix FTBFS on GNU/kFreeBSD. Closes: #496880
+
+ -- Christian Perrier <bubulle@debian.org>  Thu, 28 Aug 2008 19:30:58 +0200
+
 samba (2:3.2.3-1) unstable; urgency=high
 
   * High-urgency upload for security fix
