--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-samba (2:3.2.3-2) UNRELEASED; urgency=low
+samba (2:3.2.3-2) unstable; urgency=low
 
+  [ Christian Perrier ]
   * Fix FTBFS on GNU/kFreeBSD. Closes: #496880
 
- -- Christian Perrier <bubulle@debian.org>  Thu, 28 Aug 2008 19:30:58 +0200
+ -- Steve Langasek <vorlon@debian.org>  Sat, 30 Aug 2008 00:46:07 -0700
 
 samba (2:3.2.3-1) unstable; urgency=high
 
