--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+samba (2:3.2.3-3) UNRELEASED; urgency=low
+
+  * Add missing manpage for cifs.upcall; thanks to Per Olofsson for pointing
+    this out.  Closes: #497857.
+
+ -- Steve Langasek <vorlon@debian.org>  Sat, 30 Aug 2008 00:59:58 -0700
+
 samba (2:3.2.3-2) unstable; urgency=low
 
   [ Christian Perrier ]
