--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ samba (2:3.2.3-3) UNRELEASED; urgency=low
 
   * Add missing manpage for cifs.upcall; thanks to Per Olofsson for pointing
     this out.  Closes: #497857.
+  * Georgian debconf translation added. Closes: #498426
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 30 Aug 2008 00:59:58 -0700
 
