--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
 samba (2:3.2.3-3) UNRELEASED; urgency=low
 
+  [ Steve Langasek ]
   * Add missing manpage for cifs.upcall; thanks to Per Olofsson for pointing
     this out.  Closes: #497857.
   * Georgian debconf translation added. Closes: #498426
   * Polish debconf translation added. Thanks to Łukasz Paździora.
 
- -- Steve Langasek <vorlon@debian.org>  Sat, 30 Aug 2008 00:59:58 -0700
+  [ Jelmer Vernooij ]
+  * Add ldb-tools to Suggests: of samba. Closes: #488384
+
+ -- Jelmer Vernooij <jelmer@samba.org>  Mon, 29 Sep 2008 16:01:38 +0200
 
 samba (2:3.2.3-2) unstable; urgency=low
 
