new upstrem version.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2178 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+samba (2:3.2.3-4) UNRELEASED; urgency=low
+
+  * New upstream version.
+
+ -- Steve Langasek <vorlon@debian.org>  Fri, 03 Oct 2008 23:31:03 -0700
+
 samba (2:3.2.3-3) unstable; urgency=low
 
   [ Steve Langasek ]
