we don't need to move cifs.upcall around, it's now installed to the right place upstream.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2179 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 samba (2:3.2.3-4) UNRELEASED; urgency=low
 
-  * New upstream version.
+  * New upstream release.
+    - debian/rules: we don't need to move cifs.upcall around, it's now
+      installed to the right place upstream.
 
  -- Steve Langasek <vorlon@debian.org>  Fri, 03 Oct 2008 23:31:03 -0700
 
