Correct changelog entry
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk/samba@2181 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-samba (2:3.2.3-4) UNRELEASED; urgency=low
+samba (2:3.2.4-1) UNRELEASED; urgency=low
 
+  [ Steve Langasek ]
   * New upstream release.
     - debian/rules: we don't need to move cifs.upcall around, it's now
       installed to the right place upstream.
